add build process

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "bin/index.js",
   "scripts": {
     "test": "mocha test --compilers js:babel-register,js:babel-polyfill",
+    "build": "babel src --out-dir bin",
     "preversion": "npm test",
-    "postversion": "npm publish && git push origin master"
+    "postversion": "npm run build && npm publish && git push origin master"
   },
   "repository": {
     "type": "git",
